add bourbon, CSS, home page, about page

--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,1 +1,5 @@
-<b>home 123</b>
+<h1>Home page</h1>
+
+<a href=""><i class="fa fa-code"></i><span>Code</span></a>
+<a href=""><i class="fa fa-music"></i><span>Music</span></a>
+<a href=""><i class="fa fa-download"></i><span>Downloads</span></a>
