--- a/_includes/side.html
+++ b/_includes/side.html
@@ -5,5 +5,5 @@
     <a href="#"><i class="fa fa-google"></i></a>
     <a href="#"><i class="fa fa-linkedin-square"></i></a>
     <a href="#"><i class="fa fa-rss"></i></a>
-    <a href="#">^</a>
+    <a href="#"><i class="fa fa-angle-up"></i></a>
 </aside>
