--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,1 @@
-<footer> <sa>sanus<span>art</span></sa> &copy; footer</footer>
-
-<div class="sa-bg">sa</div>
+<footer> <sa>sanus<span>art</span></sa> &copy; {{site.year}} Sasha Khamkov</footer>
