--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,15 @@
 <header class="wrap">
     <logo><a href="{{ site.url }}">sa</a></logo>
+
     {% include nav.html %}
+
 </header>
 
 <utility>
+
     {% if page.url == '/' %}
         <img src="http://1.gravatar.com/avatar/7ddad1a9a1c8de452badaf82b6c30c76?s=60&d=&r=G">
+    <p>Sasha is web developer</p>
     {% else %}
         <a href="">Home</a> <i class="fa fa-angle-right"></i>
         <a href="">Category</a>  <i class="fa fa-angle-right"></i>
