--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,14 @@
 <nav>
     <ul>
-        <li><a href="{{site.url}}">Home</a></li> |
-        <li><a href="{{site.url}}/about">About</a></li> |
-        <li><a href="{{site.url}}/staff">Stuff</a></li> |
-        <li><a href="{{site.url}}/contact">Contact</a></li>
+
+        {% for link in site.navigation %}
+        <li>
+            <a class="nav-link {% if forloop.first %}first{% endif %} {{ current }} {% if forloop.last %}last{% endif %}"
+           href="{% if forloop.first %}/{% else %}{{ link.url }}{% endif %}" target="_self">
+            {{ link.text }}
+            </a>
+        </li>
+        {% endfor %}
+
     </ul>
 </nav>
