--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,10 @@
     </content>
 
     {% include side.html %}
+
     {% include footer.html %}
+
+    <div class="sa-bg">sa</div>
 
 </sanusart>
 </body>
