--- a/css/main.css
+++ b/css/main.css
@@ -126,9 +126,10 @@ utility {
     display: block;
     padding: 0px 0px 0px 20px;
     float: left;
+    font-size: 20px;
     line-height: 59px;
     color: #392443;
-    font-weight: 700; }
+    font-weight: 100; }
 
 content {
   margin: 1px 0px 0px 121px;
@@ -136,7 +137,13 @@ content {
   padding: 20px 0;
   color: white;
   display: inline-block;
-  width: calc(1024px - 161px); }
+  width: calc(1024px - 161px);
+  min-height: calc(100% - 237px);
+  margin-bottom: -70px; }
+  content:after {
+    content: "";
+    display: block;
+    height: 70px; }
   content h1 {
     font-size: 170%; }
   content h2 {
@@ -190,13 +197,11 @@ footer {
   background: #f5da81;
   padding: 20px;
   display: inline-block;
-  position: absolute;
-  bottom: 0;
-  right: 0;
   letter-spacing: 0;
   box-shadow: 0px 0px 20px #000;
   color: #392443;
-  width: calc(100% - 161px); }
+  width: calc(100% - 161px);
+  height: 30px; }
   footer a {
     color: #392443; }
 
