--- a/css/main.scss
+++ b/css/main.scss
@@ -234,10 +234,17 @@ content {
       line-height: 83px;
     }
   }
+  & p {
+    padding: 0px 0px 16px 0px;
+  }
+  & img {
+    float: left;
+    padding: 20px 30px 20px 0;
+  }
 }
 
 aside {
-  position: absolute;
+  position: fixed;
   left: 40px;
   bottom: 16px;
   width: 35px;
