FIXES and ADDITIONS
- Fix dropdown menu SCSS and JS
- add more page
- fix structure
- add instantclick.js

--- a/_includes/bottom.html
+++ b/_includes/bottom.html
@@ -1,2 +1,5 @@
 <script src="../assets/jquery/dist/jquery.min.js"></script>
+<script src="../assets/instantclick/instantclick.js" data-no-instant></script>
 <script src="../js/main.js"></script>
+
+
