--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,12 +1,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+    <title>{% if page.seo_title %}{{ page.seo_title }}{% else %}{{ page.title }}{% endif %}</title>
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="{{ site.description }}">
+    <meta name="description" content="{% if page.seo_description %}{{ page.seo_description }}{% else %}{{ site.description }}{% endif %}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-    <script type="text/javascript" src="../assets/modernizer/modernizr.js"></script>
-    <link rel="stylesheet" type="text/css" href="../assets/normalize.css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="../assets/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="../css/main.css">
+    <script type="text/javascript" src="/assets/modernizer/modernizr.js"></script>
+    <link rel="stylesheet" type="text/css" href="/assets/normalize.css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="/assets/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
