--- a/css/main.scss
+++ b/css/main.scss
@@ -107,6 +107,7 @@ logo {
   text-align: center;
   vertical-align: middle;
   line-height: 117px;
+  box-shadow: 3px 0px 30px #111;
   & a {
     color: $font-color;
     &:hover {
@@ -135,6 +136,7 @@ nav {
   color: $color-red;
   display: inline-block;
   float: left;
+  box-shadow: 3px -4px 10px #222;
   & ul {
     list-style-type: none;
     & li {
@@ -176,7 +178,8 @@ utility {
   padding: 20px;
   display: inline-block;
   width: calc(100% - 161px);
-  & a {
+  box-shadow: -3px 6px 10px #222;
+  & a,b {
     color: $color-purple;
   }
   & img {
@@ -246,7 +249,7 @@ content {
 aside {
   position: fixed;
   left: 40px;
-  bottom: 16px;
+  bottom: 26px;
   width: 35px;
   background: transparent;
   & a {
@@ -337,6 +340,18 @@ sa {
 
 /* Post styles */
 /* ----------------------------------------------------------*/
+
+.page--page-blog article a.post-list-item {
+  border: 1px solid rgba(255,255,255,0.3);
+  padding: 10px;
+  box-shadow: 0px 0px 20px #222;
+  background: rgba(255,255,255,.15);
+  display: block;
+  width: 100%;
+  &:hover {
+    box-shadow: 0px 0px 20px #555;
+  }
+}
 
 /* Syntax highlighting styles */
 /* ----------------------------------------------------------*/
