--- a/css/main.css
+++ b/css/main.css
@@ -268,6 +268,9 @@ sa {
     display: block;
     line-height: 0; }
 
+#instantclick {
+  display: none; }
+
 /* ----------------------------------------------------------*/
 /* Post styles */
 /* ----------------------------------------------------------*/
@@ -536,6 +539,7 @@ sa {
 .highlight .il {
   color: #009999; }
 
+/* Literal.Number.Integer.Long */
 /* Literal.Number.Integer.Long */
 /* media queries */
 /* ----------------------------------------------------------*/
