--- a/css/main.scss
+++ b/css/main.scss
@@ -335,6 +335,10 @@ sa {
   }
 }
 
+#instantclick {
+  display: none;
+}
+
 
 /* ----------------------------------------------------------*/
 
@@ -359,315 +363,198 @@ sa {
 .highlight {
   background: #ffffff;
 }
-
 .highlight .c {
   color: #999988;
   font-style: italic
-}
-
-/* Comment */
+} /* Comment */
 .highlight .err {
   color: #a61717;
   background-color: #e3d2d2
-}
-
-/* Error */
+} /* Error */
 .highlight .k {
   font-weight: bold
-}
-
-/* Keyword */
+} /* Keyword */
 .highlight .o {
   font-weight: bold
-}
-
-/* Operator */
+} /* Operator */
 .highlight .cm {
   color: #999988;
   font-style: italic
-}
-
-/* Comment.Multiline */
+} /* Comment.Multiline */
 .highlight .cp {
   color: #999999;
   font-weight: bold
-}
-
-/* Comment.Preproc */
+} /* Comment.Preproc */
 .highlight .c1 {
   color: #999988;
   font-style: italic
-}
-
-/* Comment.Single */
+} /* Comment.Single */
 .highlight .cs {
   color: #999999;
   font-weight: bold;
   font-style: italic
-}
-
-/* Comment.Special */
+} /* Comment.Special */
 .highlight .gd {
   color: #000000;
   background-color: #ffdddd
-}
-
-/* Generic.Deleted */
+} /* Generic.Deleted */
 .highlight .gd .x {
   color: #000000;
   background-color: #ffaaaa
-}
-
-/* Generic.Deleted.Specific */
+} /* Generic.Deleted.Specific */
 .highlight .ge {
   font-style: italic
-}
-
-/* Generic.Emph */
+} /* Generic.Emph */
 .highlight .gr {
   color: #aa0000
-}
-
-/* Generic.Error */
+} /* Generic.Error */
 .highlight .gh {
   color: #999999
-}
-
-/* Generic.Heading */
+} /* Generic.Heading */
 .highlight .gi {
   color: #000000;
   background-color: #ddffdd
-}
-
-/* Generic.Inserted */
+} /* Generic.Inserted */
 .highlight .gi .x {
   color: #000000;
   background-color: #aaffaa
-}
-
-/* Generic.Inserted.Specific */
+} /* Generic.Inserted.Specific */
 .highlight .go {
   color: #888888
-}
-
-/* Generic.Output */
+} /* Generic.Output */
 .highlight .gp {
   color: #555555
-}
-
-/* Generic.Prompt */
+} /* Generic.Prompt */
 .highlight .gs {
   font-weight: bold
-}
-
-/* Generic.Strong */
+} /* Generic.Strong */
 .highlight .gu {
   color: #aaaaaa
-}
-
-/* Generic.Subheading */
+} /* Generic.Subheading */
 .highlight .gt {
   color: #aa0000
-}
-
-/* Generic.Traceback */
+} /* Generic.Traceback */
 .highlight .kc {
   font-weight: bold
-}
-
-/* Keyword.Constant */
+} /* Keyword.Constant */
 .highlight .kd {
   font-weight: bold
-}
-
-/* Keyword.Declaration */
+} /* Keyword.Declaration */
 .highlight .kp {
   font-weight: bold
-}
-
-/* Keyword.Pseudo */
+} /* Keyword.Pseudo */
 .highlight .kr {
   font-weight: bold
-}
-
-/* Keyword.Reserved */
+} /* Keyword.Reserved */
 .highlight .kt {
   color: #445588;
   font-weight: bold
-}
-
-/* Keyword.Type */
+} /* Keyword.Type */
 .highlight .m {
   color: #009999
-}
-
-/* Literal.Number */
+} /* Literal.Number */
 .highlight .s {
   color: #d14
-}
-
-/* Literal.String */
+} /* Literal.String */
 .highlight .na {
   color: #008080
-}
-
-/* Name.Attribute */
+} /* Name.Attribute */
 .highlight .nb {
   color: #0086B3
-}
-
-/* Name.Builtin */
+} /* Name.Builtin */
 .highlight .nc {
   color: #445588;
   font-weight: bold
-}
-
-/* Name.Class */
+} /* Name.Class */
 .highlight .no {
   color: #008080
-}
-
-/* Name.Constant */
+} /* Name.Constant */
 .highlight .ni {
   color: #800080
-}
-
-/* Name.Entity */
+} /* Name.Entity */
 .highlight .ne {
   color: #990000;
   font-weight: bold
-}
-
-/* Name.Exception */
+} /* Name.Exception */
 .highlight .nf {
   color: #990000;
   font-weight: bold
-}
-
-/* Name.Function */
+} /* Name.Function */
 .highlight .nn {
   color: #555555
-}
-
-/* Name.Namespace */
+} /* Name.Namespace */
 .highlight .nt {
   color: #000080
-}
-
-/* Name.Tag */
+} /* Name.Tag */
 .highlight .nv {
   color: #008080
-}
-
-/* Name.Variable */
+} /* Name.Variable */
 .highlight .ow {
   font-weight: bold
-}
-
-/* Operator.Word */
+} /* Operator.Word */
 .highlight .w {
   color: #bbbbbb
-}
-
-/* Text.Whitespace */
+} /* Text.Whitespace */
 .highlight .mf {
   color: #009999
-}
-
-/* Literal.Number.Float */
+} /* Literal.Number.Float */
 .highlight .mh {
   color: #009999
-}
-
-/* Literal.Number.Hex */
+} /* Literal.Number.Hex */
 .highlight .mi {
   color: #009999
-}
-
-/* Literal.Number.Integer */
+} /* Literal.Number.Integer */
 .highlight .mo {
   color: #009999
-}
-
-/* Literal.Number.Oct */
+} /* Literal.Number.Oct */
 .highlight .sb {
   color: #d14
-}
-
-/* Literal.String.Backtick */
+} /* Literal.String.Backtick */
 .highlight .sc {
   color: #d14
-}
-
-/* Literal.String.Char */
+} /* Literal.String.Char */
 .highlight .sd {
   color: #d14
-}
-
-/* Literal.String.Doc */
+} /* Literal.String.Doc */
 .highlight .s2 {
   color: #d14
-}
-
-/* Literal.String.Double */
+} /* Literal.String.Double */
 .highlight .se {
   color: #d14
-}
-
-/* Literal.String.Escape */
+} /* Literal.String.Escape */
 .highlight .sh {
   color: #d14
-}
-
-/* Literal.String.Heredoc */
+} /* Literal.String.Heredoc */
 .highlight .si {
   color: #d14
-}
-
-/* Literal.String.Interpol */
+} /* Literal.String.Interpol */
 .highlight .sx {
   color: #d14
-}
-
-/* Literal.String.Other */
+} /* Literal.String.Other */
 .highlight .sr {
   color: #009926
-}
-
-/* Literal.String.Regex */
+} /* Literal.String.Regex */
 .highlight .s1 {
   color: #d14
-}
-
-/* Literal.String.Single */
+} /* Literal.String.Single */
 .highlight .ss {
   color: #990073
-}
-
-/* Literal.String.Symbol */
+} /* Literal.String.Symbol */
 .highlight .bp {
   color: #999999
-}
-
-/* Name.Builtin.Pseudo */
+} /* Name.Builtin.Pseudo */
 .highlight .vc {
   color: #008080
-}
-
-/* Name.Variable.Class */
+} /* Name.Variable.Class */
 .highlight .vg {
   color: #008080
-}
-
-/* Name.Variable.Global */
+} /* Name.Variable.Global */
 .highlight .vi {
   color: #008080
-}
-
-/* Name.Variable.Instance */
+} /* Name.Variable.Instance */
 .highlight .il {
   color: #009999
-}
+} /* Literal.Number.Integer.Long */
 
 /* Literal.Number.Integer.Long */
 
