--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,5 +1,25 @@
 <h1>Home page</h1>
 
-<a href=""><i class="fa fa-code"></i><span>Code</span></a>
-<a href=""><i class="fa fa-music"></i><span>Music</span></a>
-<a href=""><i class="fa fa-download"></i><span>Downloads</span></a>
+<a href="/projects/code/">
+    <i class="fa fa-code"></i><span>Code</span>
+</a>
+
+<a href="/projects/music/">
+    <i class="fa fa-music"></i><span>Music</span>
+</a>
+
+<a href="/projects/">
+    <i class="fa fa-cogs"></i><span>Projects</span>
+</a>
+
+<a href="/about/">
+    <i class="fa fa-user"></i><span>About</span>
+</a>
+
+<a href="/blog/">
+    <i class="fa fa-book"></i><span>Blog</span>
+</a>
+
+<a href="/projects/vst/">
+    <i class="fa fa-puzzle-piece"></i><span>VST</span>
+</a>
