--- a/_includes/side.html
+++ b/_includes/side.html
@@ -1,9 +1,10 @@
 <aside>
-    <a href="#"><i class="fa fa-github"></i></a>
-    <a href="#"><i class="fa fa-twitter"></i></a>
-    <a href="#"><i class="fa fa-facebook-square"></i></a>
-    <a href="#"><i class="fa fa-google"></i></a>
+    <a href="https://github.com/sanusart/sanusart.com/edit/master/bin/file.md"><i class="fa fa-pencil-square-o"></i></a>
+    <a href="https://github.com/sanusart"><i class="fa fa-github"></i></a>
+    <a href="https://twitter.com/sanusart"><i class="fa fa-twitter"></i></a>
+    <a href="https://facebook.com/sanusart"><i class="fa fa-facebook-square"></i></a>
+    <a href="https://plus.google.com/111862979601357461785"><i class="fa fa-google"></i></a>
     <a href="#"><i class="fa fa-linkedin-square"></i></a>
-    <a href="#"><i class="fa fa-rss"></i></a>
+    <a href="{{site.baseurl}}/feed.xml"><i class="fa fa-rss"></i></a>
     <a href="#"><i class="fa fa-angle-up"></i></a>
 </aside>
