--- a/_includes/bottom.html
+++ b/_includes/bottom.html
@@ -1,5 +1,1 @@
-<script src="../assets/jquery/dist/jquery.min.js"></script>
-<script src="../assets/instantclick/instantclick.js" data-no-instant></script>
-<script src="../js/main.js"></script>
-
-
+<script src="{{ site.baseurl }}/js/script.js"></script>
