--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="wrap">
-    <logo><a href="{{ site.url }}">sa</a></logo>
+    <logo><a href="{{ site.baseurl }}">sa</a></logo>
 
     {% include nav.html %}
 
@@ -9,16 +9,20 @@
 
     {% if page.url == '/' %}
 
-        <img src="http://1.gravatar.com/avatar/7ddad1a9a1c8de452badaf82b6c30c76?s=60&d=&r=G">
+        <a target="_blank" href="https://plus.google.com/111862979601357461785" rel="publisher">
+            <img src="http://1.gravatar.com/avatar/7ddad1a9a1c8de452badaf82b6c30c76?s=60&d=&r=G">
+        </a>
         <p>Sasha is web developer</p>
 
     {% else %}
 
-        <a href="{{ site.url }}">Home</a> <i class="fa fa-angle-right"></i>
+        <a href="{{ site.baseurl }}">Home</a> <i class="fa fa-angle-right"></i>
 
-        {% if page.category != 'none' %}
-            <a href="{{ page.category_url }}">{{ page.category }}</a> <i class="fa fa-angle-right"></i>
+    {% for cat in page.category %}
+        {% if cat.name != 'none' %}
+            <a href="{{ cat.url }}">{{ cat.name }}</a> <i class="fa fa-angle-right"></i>
         {% endif %}
+    {% endfor %}
 
         <b>{% if page.page_name %}{{ page.page_name }}{% else %}{{ page.title }}{% endif %}</b>
 
