--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,11 @@
 /* Base */
+/* Mixins */
 /* Fonts */
-@import url(http://fonts.googleapis.com/css?family=Exo:300,400,700,900);
+@import url(//fonts.googleapis.com/css?family=Exo:300,400,700,900);
 @font-face {
   font-family: 'spin_cycle';
-  src: url("../font/spincycle_ot-webfont.eot");
-  src: url("../font/spincycle_ot-webfont.eot?#iefix") format("embedded-opentype"), url("../font/spincycle_ot-webfont.woff") format("woff"), url("../font/spincycle_ot-webfont.ttf") format("truetype"), url("../font/spincycle_ot-webfont.svg#spin_cycle_otregular") format("svg");
+  src: url("../fonts/spincycle_ot-webfont.eot");
+  src: url("../fonts/spincycle_ot-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/spincycle_ot-webfont.woff") format("woff"), url("../fonts/spincycle_ot-webfont.ttf") format("truetype"), url("../fonts/spincycle_ot-webfont.svg#spin_cycle_otregular") format("svg");
   font-weight: normal;
   font-style: normal; }
 /* Palette */
@@ -25,7 +26,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   font-weight: 400;
-  color: white;
+  color: #fff;
   background-color: #392443; }
 
 h1, h2, h3, h4, h5, h6 {
@@ -34,7 +35,10 @@ h1, h2, h3, h4, h5, h6 {
 
 a {
   color: #00a0b0;
-  text-decoration: none; }
+  text-decoration: none;
+  outline: none;
+  -webkit-transition: all 0.15s ease-in;
+  transition: all 0.3s ease-in; }
   a:hover {
     color: #cc333f;
     text-decoration: none; }
@@ -65,7 +69,7 @@ logo {
   width: 120px;
   height: 100px;
   background: #cc333f;
-  color: white;
+  color: #fff;
   display: inline-block;
   float: left;
   font: 67px 'spin_cycle';
@@ -75,10 +79,10 @@ logo {
   line-height: 117px;
   box-shadow: 3px 0px 30px #111; }
   logo a {
-    color: white; }
+    color: #fff; }
     logo a:hover {
-      color: white;
-      text-shadow: 0px 0px 20px white; }
+      color: #fff;
+      text-shadow: 0px 0px 20px #fff; }
 
 .sa-bg {
   font: 567px 'spin_cycle';
@@ -107,18 +111,20 @@ nav {
     list-style-type: none; }
     nav ul li {
       display: inline-block; }
-      nav ul li > ul {
+      nav ul li:hover ul.sub-menu {
+        display: block; }
+      nav ul li ul.sub-menu {
         display: none;
         background: #fff;
         float: left;
         position: absolute; }
-        nav ul li > ul li {
+        nav ul li ul.sub-menu li {
           position: relative;
           border-right: 1px dotted #392443;
           margin: 10px 0; }
-          nav ul li > ul li:last-child {
+          nav ul li ul.sub-menu li:last-child {
             border: none; }
-          nav ul li > ul li a {
+          nav ul li ul.sub-menu li a {
             line-height: 40px;
             color: #00a0b0;
             margin: 32px;
@@ -131,7 +137,7 @@ nav {
 
 utility {
   margin: 1px 0px 0px 121px;
-  background: #f5da81;
+  background: #F5DA81;
   color: #cc333f;
   padding: 20px;
   display: inline-block;
@@ -150,25 +156,45 @@ utility {
     color: #392443;
     font-weight: 100; }
 
+.post-header h1 {
+  padding: 0px 0px 20px 0px;
+  border-bottom: 1px solid #555; }
+
 content {
   margin: 1px 0px 0px 121px;
   background: transparent;
   padding: 20px 0;
-  color: white;
+  color: #fff;
   display: inline-block;
   width: calc(1024px - 161px);
   min-height: calc(100% - 237px);
-  margin-bottom: -70px; }
+  margin-bottom: -70px;
+  font: 100 16px/24px 'Exo', 'Open sans', sans-serif; }
+  content .button {
+    background: #F5DA81;
+    color: #392443;
+    padding: 5px;
+    font-family: 'Exo', 'Trebuchet MS', Helvetica, Arial;
+    border: 1px solid #392443; }
+    content .button:hover {
+      background: transparent;
+      color: #F5DA81;
+      border: 1px solid #F5DA81; }
   content:after {
     content: "";
     display: block;
     height: 70px; }
+  content h1, content h2, content h3 {
+    font-family: 'Exo', 'Trebuchet MS', Helvetica, Arial;
+    color: #F5DA81;
+    text-transform: capitalize;
+    padding: 20px 0px; }
   content h1 {
     font-size: 170%; }
   content h2 {
-    font-size: 160%; }
-  content h3 {
     font-size: 150%; }
+  content h3, content h4, content h5, content h6 {
+    font-size: 130%; }
   content blockquote {
     padding: 20px 0px 20px 80px;
     position: relative;
@@ -176,7 +202,7 @@ content {
     content blockquote:after {
       content: ""; }
     content blockquote:before {
-      content: "\201C";
+      content: "\201c";
       position: absolute;
       left: 0px;
       font: 100px italic impact;
@@ -184,11 +210,19 @@ content {
       margin: 0;
       opacity: .2;
       line-height: 83px; }
-  content p {
-    padding: 0px 0px 16px 0px; }
+  content p, content ul {
+    padding: 0px 0px 16px 0px;
+    font-family: "trebuchet ms", Helvetica, Arial, Helvetica, sans-serif; }
   content img {
     float: left;
     padding: 20px 30px 20px 0; }
+  content ul {
+    list-style-position: inside;
+    list-style-type: square; }
+  content p.meta {
+    text-align: right;
+    text-transform: uppercase;
+    display: block; }
 
 aside {
   position: fixed;
@@ -210,7 +244,7 @@ aside {
       text-align: center;
       width: 45px;
       height: 45px;
-      color: white;
+      color: #fff;
       line-height: 44px;
       left: -5px;
       position: relative; }
@@ -218,7 +252,7 @@ aside {
 /* Site footer */
 footer {
   margin: 1px 0px 0px 121px;
-  background: #f5da81;
+  background: #F5DA81;
   padding: 20px;
   display: inline-block;
   letter-spacing: 0;
@@ -239,6 +273,32 @@ sa {
 
 /* Page Content styles */
 /* ----------------------------------------------------------*/
+.page--projects content a {
+  border: 1px solid;
+  font-size: 100px;
+  border-radius: 50%;
+  line-height: 160px;
+  width: 200px;
+  height: 200px;
+  display: inline-block;
+  text-align: center;
+  margin: 0 80px 80px 0;
+  background: rgba(255, 255, 255, 0.1);
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  transition: all 0.5s ease; }
+  .page--projects content a:hover {
+    color: #F5DA81;
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg); }
+  .page--projects content a span {
+    font-size: 20px;
+    display: block;
+    line-height: 0; }
+
 /* Home styles */
 .page--home utility {
   padding: 0 40px 0 0px; }
@@ -251,13 +311,13 @@ sa {
   height: 200px;
   display: inline-block;
   text-align: center;
-  margin: 0px 80px 0px 0px;
+  margin: 0 80px 80px 0;
   background: rgba(255, 255, 255, 0.1);
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
   transition: all 0.5s ease; }
   .page--home content a:hover {
-    color: #f5da81;
+    color: #F5DA81;
     -webkit-transform: rotate(360deg);
     -moz-transform: rotate(360deg);
     -ms-transform: rotate(360deg);
@@ -274,272 +334,56 @@ sa {
 /* ----------------------------------------------------------*/
 /* Post styles */
 /* ----------------------------------------------------------*/
-.page--page-blog article a.post-list-item {
+article a.post-list-item {
   border: 1px solid rgba(255, 255, 255, 0.3);
   padding: 10px;
   box-shadow: 0px 0px 20px #222;
   background: rgba(255, 255, 255, 0.15);
   display: block;
-  width: 100%; }
-  .page--page-blog article a.post-list-item:hover {
-    box-shadow: 0px 0px 20px #555; }
+  width: 100%;
+  position: relative;
+  font-size: 20px;
+  color: #00a0b0; }
+  article a.post-list-item date {
+    right: 0;
+    font-size: 12px;
+    color: #fff;
+    top: 0;
+    border-bottom: 1px solid #777;
+    position: absolute;
+    border-left: 1px solid #777;
+    padding: 5px 10px;
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 0px 0px 0px 10px; }
+  article a.post-list-item i {
+    color: #F5DA81; }
+  article a.post-list-item span {
+    width: 85%;
+    display: inline-block;
+    text-transform: capitalize; }
+  article a.post-list-item:hover {
+    box-shadow: 0px 0px 20px #555;
+    color: #F5DA81; }
 
-/* Syntax highlighting styles */
-/* ----------------------------------------------------------*/
-.highlight {
-  background: #ffffff; }
+.layout-item content .buttons {
+  text-align: right; }
+.layout-item content img {
+  float: left;
+  padding: 0px 30px 20px 0; }
 
-.highlight .c {
-  color: #999988;
-  font-style: italic; }
+code {
+  white-space: pre; }
 
-/* Comment */
-.highlight .err {
-  color: #a61717;
-  background-color: #e3d2d2; }
+.hljs {
+  display: inline;
+  background: transparent !important; }
+  .hljs:hover {
+    background: #23241f !important; }
 
-/* Error */
-.highlight .k {
-  font-weight: bold; }
+.center {
+  text-align: center; }
 
-/* Keyword */
-.highlight .o {
-  font-weight: bold; }
-
-/* Operator */
-.highlight .cm {
-  color: #999988;
-  font-style: italic; }
-
-/* Comment.Multiline */
-.highlight .cp {
-  color: #999999;
-  font-weight: bold; }
-
-/* Comment.Preproc */
-.highlight .c1 {
-  color: #999988;
-  font-style: italic; }
-
-/* Comment.Single */
-.highlight .cs {
-  color: #999999;
-  font-weight: bold;
-  font-style: italic; }
-
-/* Comment.Special */
-.highlight .gd {
-  color: #000000;
-  background-color: #ffdddd; }
-
-/* Generic.Deleted */
-.highlight .gd .x {
-  color: #000000;
-  background-color: #ffaaaa; }
-
-/* Generic.Deleted.Specific */
-.highlight .ge {
-  font-style: italic; }
-
-/* Generic.Emph */
-.highlight .gr {
-  color: #aa0000; }
-
-/* Generic.Error */
-.highlight .gh {
-  color: #999999; }
-
-/* Generic.Heading */
-.highlight .gi {
-  color: #000000;
-  background-color: #ddffdd; }
-
-/* Generic.Inserted */
-.highlight .gi .x {
-  color: #000000;
-  background-color: #aaffaa; }
-
-/* Generic.Inserted.Specific */
-.highlight .go {
-  color: #888888; }
-
-/* Generic.Output */
-.highlight .gp {
-  color: #555555; }
-
-/* Generic.Prompt */
-.highlight .gs {
-  font-weight: bold; }
-
-/* Generic.Strong */
-.highlight .gu {
-  color: #aaaaaa; }
-
-/* Generic.Subheading */
-.highlight .gt {
-  color: #aa0000; }
-
-/* Generic.Traceback */
-.highlight .kc {
-  font-weight: bold; }
-
-/* Keyword.Constant */
-.highlight .kd {
-  font-weight: bold; }
-
-/* Keyword.Declaration */
-.highlight .kp {
-  font-weight: bold; }
-
-/* Keyword.Pseudo */
-.highlight .kr {
-  font-weight: bold; }
-
-/* Keyword.Reserved */
-.highlight .kt {
-  color: #445588;
-  font-weight: bold; }
-
-/* Keyword.Type */
-.highlight .m {
-  color: #009999; }
-
-/* Literal.Number */
-.highlight .s {
-  color: #dd1144; }
-
-/* Literal.String */
-.highlight .na {
-  color: teal; }
-
-/* Name.Attribute */
-.highlight .nb {
-  color: #0086b3; }
-
-/* Name.Builtin */
-.highlight .nc {
-  color: #445588;
-  font-weight: bold; }
-
-/* Name.Class */
-.highlight .no {
-  color: teal; }
-
-/* Name.Constant */
-.highlight .ni {
-  color: purple; }
-
-/* Name.Entity */
-.highlight .ne {
-  color: #990000;
-  font-weight: bold; }
-
-/* Name.Exception */
-.highlight .nf {
-  color: #990000;
-  font-weight: bold; }
-
-/* Name.Function */
-.highlight .nn {
-  color: #555555; }
-
-/* Name.Namespace */
-.highlight .nt {
-  color: navy; }
-
-/* Name.Tag */
-.highlight .nv {
-  color: teal; }
-
-/* Name.Variable */
-.highlight .ow {
-  font-weight: bold; }
-
-/* Operator.Word */
-.highlight .w {
-  color: #bbbbbb; }
-
-/* Text.Whitespace */
-.highlight .mf {
-  color: #009999; }
-
-/* Literal.Number.Float */
-.highlight .mh {
-  color: #009999; }
-
-/* Literal.Number.Hex */
-.highlight .mi {
-  color: #009999; }
-
-/* Literal.Number.Integer */
-.highlight .mo {
-  color: #009999; }
-
-/* Literal.Number.Oct */
-.highlight .sb {
-  color: #dd1144; }
-
-/* Literal.String.Backtick */
-.highlight .sc {
-  color: #dd1144; }
-
-/* Literal.String.Char */
-.highlight .sd {
-  color: #dd1144; }
-
-/* Literal.String.Doc */
-.highlight .s2 {
-  color: #dd1144; }
-
-/* Literal.String.Double */
-.highlight .se {
-  color: #dd1144; }
-
-/* Literal.String.Escape */
-.highlight .sh {
-  color: #dd1144; }
-
-/* Literal.String.Heredoc */
-.highlight .si {
-  color: #dd1144; }
-
-/* Literal.String.Interpol */
-.highlight .sx {
-  color: #dd1144; }
-
-/* Literal.String.Other */
-.highlight .sr {
-  color: #009926; }
-
-/* Literal.String.Regex */
-.highlight .s1 {
-  color: #dd1144; }
-
-/* Literal.String.Single */
-.highlight .ss {
-  color: #990073; }
-
-/* Literal.String.Symbol */
-.highlight .bp {
-  color: #999999; }
-
-/* Name.Builtin.Pseudo */
-.highlight .vc {
-  color: teal; }
-
-/* Name.Variable.Class */
-.highlight .vg {
-  color: teal; }
-
-/* Name.Variable.Global */
-.highlight .vi {
-  color: teal; }
-
-/* Name.Variable.Instance */
-.highlight .il {
-  color: #009999; }
-
-/* Literal.Number.Integer.Long */
-/* Literal.Number.Integer.Long */
 /* media queries */
 /* ----------------------------------------------------------*/
+
+/*# sourceMappingURL=main.css.map */
