--- a/css/main.scss
+++ b/css/main.scss
@@ -1,18 +1,75 @@
 /* Base */
-
 @import 'bourbon/bourbon';
 
-/* Fonts */
+/* Mixins */
+@mixin category-cyrcles($width, $height) {
+  & content a {
+    border: 1px solid;
+    font-size: $width/2 + px;
+    border-radius: 50%;
+    line-height: ($width/2)+60 + px;
+    width: $width+px;
+    height: $height+px;
+    display: inline-block;
+    text-align: center;
+    margin: 0 80px 80px 0;
+    background: rgba(255, 255, 255, .1);
+    @include transition(all .5s ease);
+    &:hover {
+      color: $color-yellow;
+      @include transform(rotate(360deg));
+    }
+    & span {
+      font-size: 20px;
+      display: block;
+      line-height: 0;
+    }
+  }
+}
 
-@import url(http://fonts.googleapis.com/css?family=Exo:300,400,700,900);
+@mixin posts-strip() {
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  padding: 10px;
+  box-shadow: 0px 0px 20px #222;
+  background: rgba(255, 255, 255, .15);
+  display: block;
+  width: 100%;
+  position: relative;
+  font-size: 20px;
+  color: $color-blue;
+  & date {
+    right: 0;
+    font-size: 12px;
+    color: $font-color;
+    top: 0;
+    border-bottom: 1px solid #777;
+    position: absolute;
+    border-left: 1px solid #777;
+    padding: 5px 10px;
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 0px 0px 0px 10px;
+  }
+  & i {
+    color: $color-yellow;
+  }
+  & span {
+    width: 85%;
+    display: inline-block;
+    text-transform: capitalize;
+  }
+  &:hover {
+    box-shadow: 0px 0px 20px #555;
+    color: $color-yellow;
+  }
+}
+
+/* Fonts */
+@import url(//fonts.googleapis.com/css?family=Exo:300,400,700,900);
 
 @font-face {
   font-family: 'spin_cycle';
-  src: url('../font/spincycle_ot-webfont.eot');
-  src: url('../font/spincycle_ot-webfont.eot?#iefix') format('embedded-opentype'),
-  url('../font/spincycle_ot-webfont.woff') format('woff'),
-  url('../font/spincycle_ot-webfont.ttf') format('truetype'),
-  url('../font/spincycle_ot-webfont.svg#spin_cycle_otregular') format('svg');
+  src: url('../fonts/spincycle_ot-webfont.eot');
+  src: url('../fonts/spincycle_ot-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/spincycle_ot-webfont.woff') format('woff'), url('../fonts/spincycle_ot-webfont.ttf') format('truetype'), url('../fonts/spincycle_ot-webfont.svg#spin_cycle_otregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -21,8 +78,7 @@
 
 $color-red: #cc333f;
 $color-purple: #392443;
-$color-yellow: #F5DA81/*#edc951*/
-;
+$color-yellow: #F5DA81;
 $color-blue: #00a0b0;
 $font-color: #fff;
 
@@ -59,6 +115,9 @@ h1, h2, h3, h4, h5, h6 {
 a {
   color: $color-blue;
   text-decoration: none;
+  outline: none;
+  -webkit-transition: all 0.15s ease-in;
+  transition: all 0.3s ease-in;
   &:hover {
     color: $color-red;
     text-decoration: none;
@@ -125,7 +184,7 @@ logo {
   position: fixed;
   top: -50px;
   right: 0;
-  @include transform(  rotate(-40deg) );
+  @include transform(rotate(-40deg));
 }
 
 nav {
@@ -141,17 +200,20 @@ nav {
     list-style-type: none;
     & li {
       display: inline-block;
-      > ul {
+      &:hover ul.sub-menu {
+        display: block;
+      }
+      & ul.sub-menu {
         display: none;
         background: #fff;
         float: left;
         position: absolute;
         & li {
           position: relative;
-          border-right:1px dotted $color-purple;
-          margin:10px 0;
+          border-right: 1px dotted $color-purple;
+          margin: 10px 0;
           &:last-child {
-            border:none;
+            border: none;
           }
           & a {
             line-height: ($side-padding-width / 3 )+px;
@@ -179,7 +241,7 @@ utility {
   display: inline-block;
   width: calc(100% - 161px);
   box-shadow: -3px 6px 10px #222;
-  & a,b {
+  & a, b {
     color: $color-purple;
   }
   & img {
@@ -189,11 +251,16 @@ utility {
     display: block;
     padding: 0px 0px 0px 20px;
     float: left;
-    font-size:20px;
+    font-size: 20px;
     line-height: 59px;
     color: $color-purple;
-    font-weight:100;
+    font-weight: 100;
   }
+}
+
+.post-header h1 {
+  padding: 0px 0px 20px 0px;
+  border-bottom: 1px solid #555;
 }
 
 content {
@@ -205,29 +272,48 @@ content {
   width: calc(1024px - 161px);
   min-height: calc(100% - 237px);
   margin-bottom: -70px;
+  font: 100 16px/24px 'Exo', 'Open sans', sans-serif;
+  & .button {
+    background: $color-yellow;
+    color: $color-purple;
+    padding: 5px;
+    font-family: 'Exo', 'Trebuchet MS', Helvetica, Arial;
+    border: 1px solid $color-purple;
+    &:hover {
+      background: transparent;
+      color: $color-yellow;
+      border: 1px solid $color-yellow;
+    }
+  }
   &:after {
     content: "";
     display: block;
     height: 70px;
   }
+  & h1, & h2, & h3 {
+    font-family: 'Exo', 'Trebuchet MS', Helvetica, Arial;
+    color: $color-yellow;
+    text-transform: capitalize;
+    padding: 20px 0px;
+  }
   & h1 {
     font-size: 170%;
   }
   & h2 {
-    font-size: 160%;
-  }
-  & h3 {
     font-size: 150%;
+  }
+  & h3, & h4, & h5, & h6 {
+    font-size: 130%;
   }
   & blockquote {
     padding: 20px 0px 20px 80px;
     position: relative;
     font-style: italic;
     &:after {
-      content:"";
+      content: "";
     }
     &:before {
-      content: "\201C";
+      content: "\201c";
       position: absolute;
       left: 0px;
       font: 100px italic impact;
@@ -237,12 +323,23 @@ content {
       line-height: 83px;
     }
   }
-  & p {
+  & p, & ul {
     padding: 0px 0px 16px 0px;
+    font-family: "trebuchet ms", Helvetica, Arial, Helvetica, sans-serif;
   }
   & img {
     float: left;
     padding: 20px 30px 20px 0;
+  }
+
+  & ul {
+    list-style-position: inside;
+    list-style-type: square;
+  }
+  & p.meta {
+    text-align: right;
+    text-transform: uppercase;
+    display: block;
   }
 }
 
@@ -286,7 +383,7 @@ footer {
   box-shadow: 0px 0px 20px #000;
   color: $color-purple;
   width: calc(100% - 161px);
-  height:30px;
+  height: 30px;
   & a {
     color: $color-purple;
   }
@@ -305,264 +402,63 @@ sa {
 /* Page Content styles */
 /* ----------------------------------------------------------*/
 
+.page--projects {
+  @include category-cyrcles(200, 200);
+}
+
 /* Home styles */
 .page--home {
   & utility {
-    //height: 60px;
     padding: 0 40px 0 0px;
   }
-  & content a {
-    border: 1px solid;
-    font-size: 100px;
-    border-radius: 50%;
-    line-height: 160px;
-    width: 200px;
-    height: 200px;
-    display: inline-block;
-    text-align: center;
-    margin: 0px 80px 0px 0px;
-    background: rgba(255, 255, 255, .1);
-    @include transition(all .5s ease);
-    &:hover {
-      color: $color-yellow;
-      @include transform(rotate(360deg));
-    }
-    & span {
-      font-size: 20px;
-      display: block;
-      line-height: 0;
-    }
-  }
+  @include category-cyrcles(200, 200);
 }
 
 #instantclick {
   display: none;
 }
 
-
 /* ----------------------------------------------------------*/
 
 /* Post styles */
 /* ----------------------------------------------------------*/
 
-.page--page-blog article a.post-list-item {
-  border: 1px solid rgba(255,255,255,0.3);
-  padding: 10px;
-  box-shadow: 0px 0px 20px #222;
-  background: rgba(255,255,255,.15);
-  display: block;
-  width: 100%;
-  &:hover {
-    box-shadow: 0px 0px 20px #555;
+article a.post-list-item {
+  @include posts-strip;
+}
+
+.layout-item {
+  & content {
+    & .buttons {
+      text-align: right;
+    }
+    & img {
+      float: left;
+      padding: 0px 30px 20px 0;
+    }
   }
 }
 
-/* Syntax highlighting styles */
-/* ----------------------------------------------------------*/
-
-.highlight {
-  background: #ffffff;
+code {
+  white-space: pre;
 }
-.highlight .c {
-  color: #999988;
-  font-style: italic
-} /* Comment */
-.highlight .err {
-  color: #a61717;
-  background-color: #e3d2d2
-} /* Error */
-.highlight .k {
-  font-weight: bold
-} /* Keyword */
-.highlight .o {
-  font-weight: bold
-} /* Operator */
-.highlight .cm {
-  color: #999988;
-  font-style: italic
-} /* Comment.Multiline */
-.highlight .cp {
-  color: #999999;
-  font-weight: bold
-} /* Comment.Preproc */
-.highlight .c1 {
-  color: #999988;
-  font-style: italic
-} /* Comment.Single */
-.highlight .cs {
-  color: #999999;
-  font-weight: bold;
-  font-style: italic
-} /* Comment.Special */
-.highlight .gd {
-  color: #000000;
-  background-color: #ffdddd
-} /* Generic.Deleted */
-.highlight .gd .x {
-  color: #000000;
-  background-color: #ffaaaa
-} /* Generic.Deleted.Specific */
-.highlight .ge {
-  font-style: italic
-} /* Generic.Emph */
-.highlight .gr {
-  color: #aa0000
-} /* Generic.Error */
-.highlight .gh {
-  color: #999999
-} /* Generic.Heading */
-.highlight .gi {
-  color: #000000;
-  background-color: #ddffdd
-} /* Generic.Inserted */
-.highlight .gi .x {
-  color: #000000;
-  background-color: #aaffaa
-} /* Generic.Inserted.Specific */
-.highlight .go {
-  color: #888888
-} /* Generic.Output */
-.highlight .gp {
-  color: #555555
-} /* Generic.Prompt */
-.highlight .gs {
-  font-weight: bold
-} /* Generic.Strong */
-.highlight .gu {
-  color: #aaaaaa
-} /* Generic.Subheading */
-.highlight .gt {
-  color: #aa0000
-} /* Generic.Traceback */
-.highlight .kc {
-  font-weight: bold
-} /* Keyword.Constant */
-.highlight .kd {
-  font-weight: bold
-} /* Keyword.Declaration */
-.highlight .kp {
-  font-weight: bold
-} /* Keyword.Pseudo */
-.highlight .kr {
-  font-weight: bold
-} /* Keyword.Reserved */
-.highlight .kt {
-  color: #445588;
-  font-weight: bold
-} /* Keyword.Type */
-.highlight .m {
-  color: #009999
-} /* Literal.Number */
-.highlight .s {
-  color: #d14
-} /* Literal.String */
-.highlight .na {
-  color: #008080
-} /* Name.Attribute */
-.highlight .nb {
-  color: #0086B3
-} /* Name.Builtin */
-.highlight .nc {
-  color: #445588;
-  font-weight: bold
-} /* Name.Class */
-.highlight .no {
-  color: #008080
-} /* Name.Constant */
-.highlight .ni {
-  color: #800080
-} /* Name.Entity */
-.highlight .ne {
-  color: #990000;
-  font-weight: bold
-} /* Name.Exception */
-.highlight .nf {
-  color: #990000;
-  font-weight: bold
-} /* Name.Function */
-.highlight .nn {
-  color: #555555
-} /* Name.Namespace */
-.highlight .nt {
-  color: #000080
-} /* Name.Tag */
-.highlight .nv {
-  color: #008080
-} /* Name.Variable */
-.highlight .ow {
-  font-weight: bold
-} /* Operator.Word */
-.highlight .w {
-  color: #bbbbbb
-} /* Text.Whitespace */
-.highlight .mf {
-  color: #009999
-} /* Literal.Number.Float */
-.highlight .mh {
-  color: #009999
-} /* Literal.Number.Hex */
-.highlight .mi {
-  color: #009999
-} /* Literal.Number.Integer */
-.highlight .mo {
-  color: #009999
-} /* Literal.Number.Oct */
-.highlight .sb {
-  color: #d14
-} /* Literal.String.Backtick */
-.highlight .sc {
-  color: #d14
-} /* Literal.String.Char */
-.highlight .sd {
-  color: #d14
-} /* Literal.String.Doc */
-.highlight .s2 {
-  color: #d14
-} /* Literal.String.Double */
-.highlight .se {
-  color: #d14
-} /* Literal.String.Escape */
-.highlight .sh {
-  color: #d14
-} /* Literal.String.Heredoc */
-.highlight .si {
-  color: #d14
-} /* Literal.String.Interpol */
-.highlight .sx {
-  color: #d14
-} /* Literal.String.Other */
-.highlight .sr {
-  color: #009926
-} /* Literal.String.Regex */
-.highlight .s1 {
-  color: #d14
-} /* Literal.String.Single */
-.highlight .ss {
-  color: #990073
-} /* Literal.String.Symbol */
-.highlight .bp {
-  color: #999999
-} /* Name.Builtin.Pseudo */
-.highlight .vc {
-  color: #008080
-} /* Name.Variable.Class */
-.highlight .vg {
-  color: #008080
-} /* Name.Variable.Global */
-.highlight .vi {
-  color: #008080
-} /* Name.Variable.Instance */
-.highlight .il {
-  color: #009999
-} /* Literal.Number.Integer.Long */
 
-/* Literal.Number.Integer.Long */
+.hljs {
+  display: inline;
+  background: transparent !important;
+  &:hover {
+    background: #23241f !important;
+  }
+}
+
+.center {
+  text-align: center;
+}
 
 /* media queries */
 /* ----------------------------------------------------------*/
 
 @media screen and (max-width: 750px) {
-
 }
 
 @media screen and (max-width: 600px) {
