--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,14 @@
+@import url(//fonts.googleapis.com/css?family=Exo:300,400,700,900);
 /* Base */
 /* Mixins */
 /* Fonts */
-@import url(//fonts.googleapis.com/css?family=Exo:300,400,700,900);
 @font-face {
   font-family: 'spin_cycle';
-  src: url("../fonts/spincycle_ot-webfont.eot");
-  src: url("../fonts/spincycle_ot-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/spincycle_ot-webfont.woff") format("woff"), url("../fonts/spincycle_ot-webfont.ttf") format("truetype"), url("../fonts/spincycle_ot-webfont.svg#spin_cycle_otregular") format("svg");
+  src: url('../fonts/spincycle_ot-webfont.eot');
+  src: url('../fonts/spincycle_ot-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/spincycle_ot-webfont.woff') format('woff'), url('../fonts/spincycle_ot-webfont.ttf') format('truetype'), url('../fonts/spincycle_ot-webfont.svg#spin_cycle_otregular') format('svg');
   font-weight: normal;
   font-style: normal; }
+
 /* Palette */
 /* Vars */
 /* ----------------------------------------------------------*/
@@ -44,8 +45,7 @@ a {
     text-decoration: none; }
 
 /* Utility */
-.wrap:before,
-.wrap:after {
+.wrap:before, .wrap:after {
   content: "";
   display: table; }
 
@@ -87,7 +87,7 @@ logo {
 .sa-bg {
   font: 567px 'spin_cycle';
   letter-spacing: -60px;
-  opacity: .1;
+  opacity: 0.1;
   z-index: -1;
   position: fixed;
   top: -50px;
@@ -208,14 +208,15 @@ content {
       font: 100px italic impact;
       padding: 0;
       margin: 0;
-      opacity: .2;
+      opacity: 0.2;
       line-height: 83px; }
   content p, content ul {
     padding: 0px 0px 16px 0px;
     font-family: "trebuchet ms", Helvetica, Arial, Helvetica, sans-serif; }
   content img {
     float: left;
-    padding: 20px 30px 20px 0; }
+    margin: 0px 30px 20px 0;
+    box-shadow: -3px 6px 10px #222; }
   content ul {
     list-style-position: inside;
     list-style-type: square; }
@@ -369,7 +370,8 @@ article a.post-list-item {
   text-align: right; }
 .layout-item content img {
   float: left;
-  padding: 0px 30px 20px 0; }
+  margin: 0px 30px 20px 0;
+  box-shadow: -3px 6px 10px #222; }
 
 code {
   white-space: pre; }
@@ -385,5 +387,6 @@ code {
 
 /* media queries */
 /* ----------------------------------------------------------*/
+@media screen and (max-width: 750px) { }
 
-/*# sourceMappingURL=main.css.map */
+@media screen and (max-width: 600px) { }
