WIP: content and fix templates

--- a/css/main.css
+++ b/css/main.css
@@ -369,7 +369,7 @@ article a.post-list-item {
 .layout-item content .buttons {
   text-align: right; }
 .layout-item content img {
-  float: left;
+  floyat: left;
   margin: 0px 30px 20px 0;
   box-shadow: -3px 6px 10px #222; }
 
