--- a/css/main.scss
+++ b/css/main.scss
@@ -433,7 +433,7 @@ article a.post-list-item {
       text-align: right;
     }
     & img {
-      float: left;
+      floyat: left;
       margin: 0px 30px 20px 0;
       box-shadow: -3px 6px 10px #222;
     }
@@ -460,6 +460,7 @@ code {
 /* ----------------------------------------------------------*/
 
 @media screen and (max-width: 750px) {
+
 }
 
 @media screen and (max-width: 600px) {
