--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,11 +5,15 @@ layout: default
 
   <header class="post-header">
     <h1>{{ page.title }}</h1>
-    <p class="meta">{{ page.date | date: "%b %-d, %Y" }} by <b>{{ site.author }}</b></p>
+    <p class="meta">{{ page.date | date: "%b %-d, %Y" }} by <b>{%if page.author %}{{ page.author }}{% else %}{{ site.author }}{% endif %}</b></p>
   </header>
 
   <article class="post-content">
-
+      {%if page.image %}
+      <a href="{{site.baseurl}}/images/{{page.image}}">
+          <img src="{{site.baseurl}}/images/{{page.image}}" width="300" />
+      </a>
+      {% endif %}
   {{ content }}
 
       <!-- disqus HERE -->
