STYLE: add some "cosmetics"

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="wrap">
-    <logo><a href="{{ site.baseurl }}">sa</a></logo>
+    <logo><a href="/">sa</a></logo>
 
     {% include nav.html %}
 
@@ -16,7 +16,7 @@
 
     {% else %}
 
-        <a href="{{ site.baseurl }}">Home</a> <i class="fa fa-angle-right"></i>
+        <a href="/">Home</a> <i class="fa fa-angle-right"></i>
 
     {% for cat in page.category %}
         {% if cat.name != 'none' %}
