--- a/_includes/side.html
+++ b/_includes/side.html
@@ -7,12 +7,12 @@
         {% assign file_to_edit = page.path %}
     {% endif %}
 <aside>
-    <a target="_blank" href="https://github.com/sanusart/sanusart.com/edit/master/{{ underscore }}{{ file_to_edit }}"><i class="fa fa-pencil-square-o"></i></a>
-    <a target="_blank" href="https://github.com/sanusart"><i class="fa fa-github"></i></a>
-    <a target="_blank" href="https://twitter.com/sanusart"><i class="fa fa-twitter"></i></a>
-    <a target="_blank" href="https://facebook.com/sanusart"><i class="fa fa-facebook-square"></i></a>
-    <a target="_blank" href="https://plus.google.com/111862979601357461785"><i class="fa fa-google"></i></a>
-    <a target="_blank" href="#"><i class="fa fa-linkedin-square"></i></a>
-    <a target="_blank" href="{{site.baseurl}}/feed.xml"><i class="fa fa-rss"></i></a>
-    <a href="#"><i class="fa fa-angle-up"></i></a>
+    <a title="Contribute by editing/adding to this page on GitHub" target="_blank" href="https://github.com/sanusart/sanusart.com/edit/master/{{ underscore }}{{ file_to_edit }}"><i class="fa fa-pencil-square-o"></i></a>
+    <a title="GitHub page" target="_blank" href="https://github.com/sanusart"><i class="fa fa-github"></i></a>
+    <a title="Follow @sanusart on Twitter" target="_blank" href="https://twitter.com/sanusart"><i class="fa fa-twitter"></i></a>
+    <a title="Facebook page" target="_blank" href="https://facebook.com/sanusart"><i class="fa fa-facebook-square"></i></a>
+    <a title="G+" target="_blank" href="https://plus.google.com/111862979601357461785"><i class="fa fa-google"></i></a>
+    <a title="LinkedIn" target="_blank" href="#"><i class="fa fa-linkedin-square"></i></a>
+    <a title="RSS" target="_blank" href="{{site.baseurl}}/feed.xml"><i class="fa fa-rss"></i></a>
+    <a title="To the top ^" href="#"><i class="fa fa-angle-up"></i></a>
 </aside>
