--- a/css/main.css
+++ b/css/main.css
@@ -15,9 +15,9 @@
 * {
   margin: 0;
   padding: 0;
-  -webkit-transition: all 1ms;
-  -moz-transition: all 1ms;
-  transition: all 1ms; }
+  -webkit-transition: all 0.3s ease-in;
+  -moz-transition: all 0.3s ease-in;
+  transition: all 0.3s ease-in; }
 
 html, body {
   height: 100%; }
@@ -34,12 +34,15 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 100%;
   font-weight: 400; }
 
+:hover {
+  -webkit-transition: all 0.3s ease-in;
+  -moz-transition: all 0.3s ease-in;
+  transition: all 0.3s ease-in; }
+
 a {
   color: #00a0b0;
   text-decoration: none;
-  outline: none;
-  -webkit-transition: all 0.15s ease-in;
-  transition: all 0.3s ease-in; }
+  outline: none; }
   a:hover {
     color: #cc333f;
     text-decoration: none; }
@@ -236,6 +239,12 @@ aside {
     font-size: 40px;
     text-decoration: none;
     text-shadow: 0px 0px 5px #000; }
+    aside a i:hover {
+      -webkit-transform: scale(0.8, 0.8);
+      -moz-transform: scale(0.8, 0.8);
+      -ms-transform: scale(0.8, 0.8);
+      -o-transform: scale(0.8, 0.8);
+      transform: scale(0.8, 0.8); }
     aside a:hover {
       color: #bab3bd;
       text-shadow: 0px 0px 20px #000; }
@@ -364,7 +373,12 @@ article a.post-list-item {
     text-transform: capitalize; }
   article a.post-list-item:hover {
     box-shadow: 0px 0px 20px #555;
-    color: #F5DA81; }
+    color: #F5DA81;
+    -webkit-transform: scale(1.03, 1.03);
+    -moz-transform: scale(1.03, 1.03);
+    -ms-transform: scale(1.03, 1.03);
+    -o-transform: scale(1.03, 1.03);
+    transform: scale(1.03, 1.03); }
 
 .layout-item content .buttons {
   text-align: right; }
