--- a/css/main.scss
+++ b/css/main.scss
@@ -60,6 +60,7 @@
   &:hover {
     box-shadow: 0px 0px 20px #555;
     color: $color-yellow;
+    @include transform(scale(1.03,1.03));
   }
 }
 
@@ -91,7 +92,7 @@ $side-padding-width: 120;
 * {
   margin: 0;
   padding: 0;
-  @include transition(all 1ms);
+  @include transition(all 0.3s ease-in);
 }
 
 html, body {
@@ -112,12 +113,14 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 400;
 }
 
+:hover {
+  @include transition(all 0.3s ease-in);
+}
+
 a {
   color: $color-blue;
   text-decoration: none;
   outline: none;
-  -webkit-transition: all 0.15s ease-in;
-  transition: all 0.3s ease-in;
   &:hover {
     color: $color-red;
     text-decoration: none;
@@ -354,6 +357,9 @@ aside {
     font-size: 40px;
     text-decoration: none;
     text-shadow: 0px 0px 5px #000;
+    & i:hover {
+      @include transform(scale(0.8, 0.8));
+    }
     &:hover {
       color: lighten(#887c8e, 20);
       text-shadow: 0px 0px 20px #000;
