FIX: rename content files
- rename content files by removing date from start of the filenames.

--- a/_includes/side.html
+++ b/_includes/side.html
@@ -14,5 +14,5 @@
     <a class="hint--right  hint--success  hint--rounded" data-hint="G+" target="_blank" href="https://plus.google.com/111862979601357461785"><i class="fa fa-google"></i></a>
     <a class="hint--right  hint--success  hint--rounded" data-hint="LinkedIn" target="_blank" href="https://www.linkedin.com/in/sanusart"><i class="fa fa-linkedin-square"></i></a>
     <a class="hint--right  hint--success  hint--rounded" data-hint="RSS" target="_blank" href="{{site.baseurl}}/feed.xml"><i class="fa fa-rss"></i></a>
-    <a class="hint--right  hint--success  hint--rounded" data-hint="To the top ^" href="#"><i class="fa fa-angle-up"></i></a>
+    <a class="hint--right  hint--success  hint--rounded totop" data-hint="To the top ^" href="#sanusart"><i class="fa fa-angle-up"></i></a>
 </aside>
