--- a/_layouts/item.html
+++ b/_layouts/item.html
@@ -5,7 +5,7 @@ layout: default
 
   <header class="post-header">
     <h1>{{ page.title }}</h1>
-    <p class="meta">{{ page.date | date: "%b %-d, %Y" }} by <b>{{ site.author }}</b></p>
+    <p class="meta">Published by <b>{{ site.author }}</b></p>
   </header>
 
   <article class="post-content">
