UI: fix for handhelds

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,5 @@
 <footer> <sa>sanus<span>art</span></sa> &copy; {{site.year}} Sasha Khamkov</footer>
+<div id="slide">
+    <nav></nav>
+    <i class="fa fa-close close"></i>
+</div>
