--- a/css/main.scss
+++ b/css/main.scss
@@ -1,8 +1,6 @@
 /* Base */
 @import 'bourbon/bourbon';
 
-
-
 /* Mixins */
 @mixin category-cyrcles($width, $height) {
   & content a {
@@ -62,7 +60,7 @@
   &:hover {
     box-shadow: 0px 0px 20px #555;
     color: $color-yellow;
-    @include transform(scale(1.03,1.03));
+    @include transform(scale(1.03, 1.03));
   }
 }
 
@@ -481,13 +479,15 @@ code {
     margin: 1px 0 0 0px;
     width: 90%;
   }
-aside {
-  display: none;
-}
-  nav ul li>a {
+
+  aside {
+    display: none;
+  }
+
+  nav a.burger {
     line-height: 100px;
     color: #000;
-    margin: 0px 15px 0px 35px;
+    margin: 0 35px;
     font-size: 2rem;
   }
 
@@ -500,14 +500,64 @@ aside {
   }
 
   .page--home content a,
-  .page--projects content a{
+  .page--projects content a {
     line-height: 250px;
     width: 300px;
     height: 300px;
-    margin: 0 80px 80px 0;
+    margin: 0 auto 40px;
+    display: block;
   }
   .page--home content a span {
     font-size: 2rem;
   }
 
+  .page--home h1 {
+    text-align: center;
+  }
+
+header nav ul {
+  display:none;
+}
+
+#slide {
+  position: absolute;
+  left: -200px;
+  top: 0;
+  width: 180px;
+  height: 100%;
+  padding: 0px 0px 0px 20px;
+  box-shadow: -9px 0px 30px #000 inset;
+  background: rgba(255,255,255,.2);
+  & .close {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    border: 1px solid #fff;
+    padding: 5px 6px;
+    border-radius: 3px;
+    &:active {
+        background: #fff;
+        color: $color-purple;
+    }
+  }
+  & ul li {
+    background: 0 0;
+    list-style: none;
+    padding: 5px 0px 0 10px;
+    top: 39px;
+    margin: 5px;
+    border-left: 2px solid #F5DA81;
+    border-bottom: 0px dotted #f5da81;
+    position: relative;
+    & a {
+      color:$color-yellow;
+    }
+  }
+}
+
+.sa-bg {
+  font: 430px spin_cycle;
+  top: -50px;
+  right: -50px;
+}
 }
